--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/ChakradharG/ResM#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5"
+  },
+  "type": "module"
 }
