--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "express": "^4.17.1"
   },
   "type": "module"
 }
