--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "resm",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "An all in one Resource Manager",
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "dev": "nodemon main.js",
+    "dev": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +22,8 @@
     "ejs": "^3.1.6",
     "sqlite": "^4.0.21",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "electron": "^12.0.2"
   }
 }
